Deployment d14bc489-bcaf-4558-9bf0-5e784bbdc159: Run number 786

--- a/src/WRA.Umbraco.Web/Views/Partials/_mywraHeader.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_mywraHeader.cshtml
@@ -19,7 +19,7 @@
     </div>
 } else {
     <header class="page-header page-header--mywra d-none d-lg-block pt-4">
-        <div class="container ps-4">
+        <div class="w-100 ps-5">
             <div class="container--sm position-relative mb-lg-n12">
                 <div class="d-flex flex-row align-items-center">
                     <div class="decorative-img-wrapper">
