--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/magazineFeatures.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/magazineFeatures.cshtml
@@ -90,14 +90,14 @@
                             Download PDF
                             <i class="fas fa-download ms-1"></i>
                         </a>
-                        <a href="@currentIssueContent.Url()" class="btn btn-link-arrow ms-n2_5" ">
+                        <a href="@currentIssueContent.Url()" class="btn btn-link-arrow ms-n2_5" />
                             Read Online
                             <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0.820801 8L12.0314 8" stroke="#050F1E" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
                                 <path d="M8.51733 4L12.5173 8L8.51733 12" stroke="#050F1E" stroke-width="1.37143" stroke-linecap="round"
                                       stroke-linejoin="round" />
                             </svg>
-                        </a>
+                        
                     </div>
                 </div>
 
