--- a/src/WRA.Umbraco.Web/Views/CollectionPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CollectionPage.cshtml
@@ -67,7 +67,7 @@
 
 @await Html.PartialAsync("blockgrid/default", sections)
 
-<div class="container my-4 my-lg-6">
+@* <div class="container my-4 my-lg-6"> *@
 
     @*  @if (isBundled)  //COURSE BUNDLE CARD
         {
