Deployment 8f579c49-66e7-4fb1-8fc2-69dac3bb2c8b: Run number 789

--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_mywra.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_mywra.scss
@@ -91,3 +91,24 @@
     }
 
 }
+
+/*body {
+    overflow: hidden;
+}*/
+
+.mywra-tab__panel {
+    border: solid 1px red;
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    background-color: #FFF;
+    overflow: auto;
+    z-index: 9;
+    width: 100%;
+    height: calc(100% - var(--header-height));
+    padding-bottom: 3rem;
+
+    &[aria-hidden="true"] {
+        display: none;
+    }
+}
