--- a/src/WRA.Umbraco.Web/Views/mywraToolKit.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraToolKit.cshtml
@@ -13,7 +13,7 @@
         @await Html.PartialAsync("_mywraHeader", new ViewDataDictionary(this.ViewData) { { "isMobile", true } })
         @await Html.PartialAsync("_mywraNav")
 
-        <div class="col position-relative">
+        <div class="col position-relative pb-5">
             @await Html.PartialAsync("_mywraHeader", new ViewDataDictionary(this.ViewData) { { "isMobile", false } })
           
             <div class="mywra-right container container--md ms-0 pt-5 pt-lg-11">
