--- a/src/WRA.Umbraco.Web/Views/Partials/_mywraNav.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_mywraNav.cshtml
@@ -1,8 +1,10 @@
-﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
+﻿@using Umbraco.Cms.Web.Common.PublishedModels;
+@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 
 @{
-    IEnumerable<IPublishedContent> myWraNavItems = Model.SiblingsAndSelf().Where(x => x.IsVisible() && x.IsPublished());
+    IEnumerable<IPublishedContent> myWraNavItems = Model.GetTemplateAlias() == "mywraHome" ? Model.Children().Where(x => x.IsVisible() && x.IsPublished()) : Model.SiblingsAndSelf().Where(x => x.IsVisible() && x.IsPublished()); ;
 }
+
 
 <div class="col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
     <div class="mywra-left px-4 pb-6">
